apps/argocd/overlays/prod/ingress.yaml
---
# argocd external
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.francisco.com.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
